Handle forbidden Companion scopes
